--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.23.0",
     "moment": "^2.29.1",
+    "sockjs-client": "^1.6.0",
+    "stompjs": "^2.3.3",
     "vant": "^2.12.29",
     "vue": "^2.5.2",
     "vue-axios": "^3.3.7",
